Do not use time_t when calculating average date, that works only on a limited scale. Use QDate's Julian Day to get a much wider range.

BUG: 256789

svn path=/branches/extragear/graphics/digikam/core/; revision=1217733